@@ -76,7 +76,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;startsecs=1                   ; # of secs prog must stay up to be running (def. 1)
 ;startretries=3                ; max # of serial start failures when starting (default 3)
 ;autorestart=unexpected        ; when to restart if exited after running (def: unexpected)
-;exitcodes=0,2                 ; 'expected' exit codes used with autorestart (default 0,2)
+;exitcodes=0                   ; 'expected' exit codes used with autorestart (default 0)
 ;stopsignal=QUIT               ; signal used to kill process (default TERM)
 ;stopwaitsecs=10               ; max num secs to wait b4 SIGKILL (default 10)
 ;stopasgroup=false             ; send stop signal to the UNIX process group (default false)
@@ -115,7 +115,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;startsecs=1                   ; # of secs prog must stay up to be running (def. 1)
 ;startretries=3                ; max # of serial start failures when starting (default 3)
 ;autorestart=unexpected        ; autorestart if exited after running (def: unexpected)
-;exitcodes=0,2                 ; 'expected' exit codes used with autorestart (default 0,2)
+;exitcodes=0                   ; 'expected' exit codes used with autorestart (default 0)
 ;stopsignal=QUIT               ; signal used to kill process (default TERM)
 ;stopwaitsecs=10               ; max num secs to wait b4 SIGKILL (default 10)
 ;stopasgroup=false             ; send stop signal to the UNIX process group (default false)
