@@ -1134,7 +1134,7 @@ class SupervisorNamespaceXMLRPCInterfaceTests(TestBase):
         self.assertEqual(configs[0]['startsecs'], 10)
         self.assertEqual(configs[0]['redirect_stderr'], False)
         self.assertEqual(configs[0]['stdout_logfile'], 'auto')
-        self.assertEqual(configs[0]['exitcodes'], (0, 2))
+        self.assertEqual(configs[0]['exitcodes'], (0,))
         self.assertEqual(configs[0]['stderr_capture_maxbytes'], 0)
         self.assertEqual(configs[0]['startretries'], 999)
         self.assertEqual(configs[0]['stderr_logfile_maxbytes'], 0)
@@ -1161,7 +1161,7 @@ class SupervisorNamespaceXMLRPCInterfaceTests(TestBase):
         self.assertEqual(configs[1]['startsecs'], 10)
         self.assertEqual(configs[1]['redirect_stderr'], False)
         self.assertEqual(configs[1]['stdout_logfile'], 'none')
-        self.assertEqual(configs[1]['exitcodes'], (0, 2))
+        self.assertEqual(configs[1]['exitcodes'], (0,))
         self.assertEqual(configs[1]['stderr_capture_maxbytes'], 0)
         self.assertEqual(configs[1]['startretries'], 999)
         self.assertEqual(configs[1]['stderr_logfile_maxbytes'], 0)
